kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-demo-api
  namespace: security-demo
spec:
  selector:
    app.kubernetes.io/name: secure-demo-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
